compiler/tools/fpp-check/test/command/bad_priority.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/command/bad_priority.fpp: 3.28
  async command C priority "abc"
                           ^
error: cannot convert string to a numeric type
